<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LightFragment"
    android:orientation="horizontal"
    android:weightSum="3">

    <!-- saved colour area -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="6">

        <!-- under-lighting settings -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:text="@string/underlight_section_title"
            android:textSize="24sp" />

        <!-- solid colour setting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/solid_underlight_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/underlight_button"/>

            <Button
                android:id="@+id/solid_colour_selector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFFF0000"/>

        </LinearLayout>

        <!-- 2x2 pre-programmed pattern matrix pt1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/pattern_button_1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/pattern_button_1"/>

            <Button
                android:id="@+id/pattern_button_2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/pattern_button_2"/>

        </LinearLayout>

        <!-- 2x2 pre-programmed pattern matrix pt2 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="5dp"
            android:orientation="horizontal"
            android:weightSum="2">

            <Button
                android:id="@+id/pattern_button_3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/pattern_button_3"/>

            <Button
                android:id="@+id/pattern_button_4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/pattern_button_4"/>

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:text="@string/interior_section_title"
            android:textSize="24sp" />

        <!-- solid colour setting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/primary_interior_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/underlight_button"/>

            <Button
                android:id="@+id/primary_interior_colour_selector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFFF0000"/>

        </LinearLayout>

        <!-- solid colour setting -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="3">

            <Button
                android:id="@+id/secondary_interior_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:text="@string/underlight_button"/>

            <Button
                android:id="@+id/secondary_interior_colour_selector"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:layout_marginEnd="5dp"
                android:backgroundTint="#FFFF0000"/>

        </LinearLayout>

    </LinearLayout>

    <!-- car icon -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="5">

        <Space
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3"
            android:orientation="horizontal"
            android:weightSum="5">

            <Space
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:src="@drawable/car_outline"/>

        </LinearLayout>

    </LinearLayout>

    <!-- colour picker and stuff -->
    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:orientation="vertical"
        android:weightSum="6">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:text="@string/light_status_title"
            android:textSize="24sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- TODO: find something to integrate here -->

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="5dp"
            android:layout_weight="0.5"
            android:background="@drawable/rounded_background"
            android:gravity="center"
            android:text="@string/color_picker_title"
            android:textSize="24sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="4"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            android:padding="5dp">

            <!-- frame layout added for background -->
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_background">

                <com.rarepebble.colorpicker.ColorPickerView
                    android:id="@+id/color_picker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:colorpicker_showAlpha="true"
                    app:colorpicker_showHex="true"
                    app:colorpicker_showPreview="true"
                    android:rotation="90"
                    android:scaleY="1.25"
                    android:scaleX="1.25" />

            </FrameLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</LinearLayout>